styles/article-card.module.css
.date {
    position: relative;
    font-size: 12px;
    color: var(--text-secondary);
    margin-top: 10px;
}

.icon {
    position: relative;
    width: 24px;
    height: 24px;
    min-width: 24px;
    min-height: 24px;
    font-size: 16px;
    line-height: 21px;
    text-align: center;
    background-color: var(--background);
    color: var(--text-secondary);
    border-radius: 50%;
    border-width: 2px;
    border-style: solid;
    border-color: var(--text-secondary);
    margin-left: 10px;
    margin-right: 10px;
}

.info {
    text-align: left;
    margin: 0;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow-x: hidden;
}

.item {
    display: flex;
    flex-direction: column;
    justify-content: left;
    align-items: left;
    padding: 10px;
    overflow: hidden;
    min-height: 100px;
    max-height: 200px;
    border-radius: 5px;
}

.item:hover {
    cursor: pointer;
    background-color: var(--background-hover);
    overflow: hidden;
}

.itemHeader {
    display: flex;
    flex-direction: row;
    justify-content: left;
    align-items: center;
    margin-bottom: 10px;
}

.itemTitle {
    margin: 0;
    color: var(--text-muted);
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow-x: hidden;
}

.description {
    max-height: 97px;
    text-align: left;
    overflow: hidden;
    text-overflow: ellipsis;
    color: var(--text-muted)
}

